--- a/style.css
+++ b/style.css
@@ -12,10 +12,24 @@
   padding: 36px 160px;
 }
 
+.showcase-container-content {
+  max-width: 1120px;
+  margin: auto;
+  position: relative;
+}
+
+.showcase-container-content > img {
+  position: absolute;
+  top: 35px;
+  right: -50px;
+}
+
+/* Navbar */
 .header-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 116px;
 }
 
 .navbar-container {
@@ -55,4 +69,90 @@
   color: #eef4ff;
   background-color: #3e3fd8;
   transition: all ease-in-out 0.5s;
+}
+
+/* Showcase */
+
+.showcase-content h2 {
+  max-width: 550px;
+  font-size: 4rem;
+  color: #2e323b;
+}
+
+.showcase-content p {
+  max-width: 455px;
+  font-size: 1.125rem;
+  color: #61646b;
+  margin-bottom: 10px;
+}
+
+.showcase-buttons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 30px;
+  margin-bottom: 108px;
+}
+
+.showcase-buttons button:first-child > i {
+  margin-left: 15px;
+  background-color: #eef4ff;
+  color: black;
+  padding: 7px;
+  border-radius: 5px;
+}
+
+.showcase-buttons button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3e3fd8;
+  color: #eef4ff;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  padding: 17px 23px;
+  cursor: pointer;
+}
+
+.showcase-buttons button#video {
+  margin-left: 30px;
+  margin-right: 20px;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  position: relative;
+}
+
+.showcase-buttons button#video i {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 14px;
+  left: 14px;
+}
+
+.showcase-buttons label {
+  margin-right: 38px;
+  color: #61646b;
+  font-size: 1.125rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.showcase-buttons div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #eef4ff;
+  border-radius: 20px;
+  padding: 22px 44px;
+  box-shadow: 0 0 15px 1px #00000025;
+}
+
+.showcase-buttons div span {
+  color: #2e323b;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
