--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
 
 /* Showcase */
 
-.showcase-content h2 {
+.showcase-content h1 {
   max-width: 550px;
   font-size: 4rem;
   color: #2e323b;
@@ -155,4 +155,98 @@
   color: #2e323b;
   font-weight: 600;
   margin-bottom: 10px;
+}
+
+/* Clientes*/
+.clients-container {
+  margin-bottom: 140px;
+}
+
+.clients-container h2 {
+  margin-top: 80px;
+}
+
+.clients {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.clients img {
+  width: 150px;
+}
+
+/*  */
+.next-level-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 140px;
+}
+
+.next-level-left {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 40px;
+  max-width: 460px;
+}
+
+.next-level-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.next-level-item i {
+  height: 70px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  color: white;
+  box-shadow: 0 0 15px 1px #00000025;
+}
+
+.next-level-item-text {
+  margin-left: 20px;
+}
+
+.next-level-item-text span {
+  font-size: 1.5rem;
+  color: #2e323b;
+  font-weight: 600;
+}
+
+.next-level-item-text p {
+  font-size: 1.125rem;
+  color: #61646b;
+}
+
+.scheduling {
+  background-color: #50cb93;
+}
+.reminder {
+  background-color: #ff3d68;
+}
+.shop {
+  background-color: #7d83fc;
+}
+
+.next-level-right img {
+  width: 450px;
+}
+
+/* utilities */
+.main-container {
+  max-width: 1120px;
+  margin: auto;
+}
+
+h2 {
+  color: #2e323b;
+  font-size: 3rem;
 }
