--- a/style.css
+++ b/style.css
@@ -200,25 +200,8 @@
   margin-bottom: 20px;
 }
 
-.next-level-item i {
-  height: 70px;
-  width: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  color: white;
-  box-shadow: 0 0 15px 1px #00000025;
-}
-
 .next-level-item-text {
   margin-left: 20px;
-}
-
-.next-level-item-text span {
-  font-size: 1.5rem;
-  color: #2e323b;
-  font-weight: 600;
 }
 
 .next-level-item-text p {
@@ -240,6 +223,81 @@
   width: 450px;
 }
 
+/* */
+.boost-business-container {
+  text-align: center;
+}
+
+.boost-business-container h2 {
+  max-width: 420px;
+  width: 100%;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.boost-business-container > p {
+  max-width: 360px;
+  margin: auto;
+  width: 100%;
+}
+
+.boost-business-cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 20px;
+  margin-top: 40px;
+  margin-bottom: 140px;
+}
+
+.boost-business-card {
+  text-align: start;
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.25);
+  padding: 30px;
+  padding-bottom: 50px;
+  border: 2px solid rgba(0, 0, 0, 0);
+}
+
+.boost-business-card:first-child:hover {
+  border: 2px solid #50cb93;
+  box-shadow: 0px 0px 15px 10px rgba(80, 203, 148, 0.4);
+  transition: all ease 0.3s;
+}
+.boost-business-card:nth-child(2):hover {
+  border: 2px solid #7d83fc;
+  box-shadow: 0px 0px 15px 10px rgba(125, 131, 252, 0.4);
+  transition: all ease 0.3s;
+}
+.boost-business-card:last-child:hover {
+  border: 2px solid #ff3d68;
+  box-shadow: 0px 0px 15px 10px rgba(255, 61, 103, 0.4);
+  transition: all ease 0.3s;
+}
+
+.boost-business-card i {
+  width: 100px;
+  height: 100px;
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+.boost-business-card p {
+  margin-bottom: 20px;
+}
+
+.boost-business-card a {
+  color: #3e3fd8;
+  font-weight: 600;
+  text-decoration: none;
+  position: relative;
+}
+
+.boost-business-card a::after {
+  content: " ➔";
+  position: absolute;
+  top: 2px;
+  left: 85px;
+}
+
 /* utilities */
 .main-container {
   max-width: 1120px;
@@ -249,4 +307,26 @@
 h2 {
   color: #2e323b;
   font-size: 3rem;
+}
+
+p {
+  font-size: 1.125rem;
+  color: #61646b;
+}
+
+.title {
+  font-size: 1.5rem;
+  color: #2e323b;
+  font-weight: 600;
+}
+
+.card-icon {
+  height: 70px;
+  width: 100px;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  color: white;
+  box-shadow: 0 0 15px 1px #00000025;
 }
