--- a/style.css
+++ b/style.css
@@ -299,10 +299,11 @@
 }
 
 /* */
-.solutions-container {  
+.solutions-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 200px;
 }
 
 .solutions-container img {
@@ -323,7 +324,8 @@
   justify-content: flex-start;
   column-gap: 20px;
 }
-.total-clients, .total-projects {
+.total-clients,
+.total-projects {
   position: relative;
   border-radius: 25px;
   padding: 10px 35px 20px;
@@ -349,6 +351,61 @@
   top: 60px;
   left: 40px;
 }
+
+/* */
+.testemonials-container {
+  text-align: center;
+  margin-bottom: 200px;
+}
+
+.testemonials-container-title {
+  color: #3e3fd8;
+  letter-spacing: 0.7rem;
+  font-size: 1.5rem;
+}
+
+.testemonials-container h2 {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.testemonials-cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: start;
+  column-gap: 20px;
+}
+.testemonial-card {
+  padding: 30px 30px 40px;
+  border-radius: 40px;
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.25);
+  border: 2px solid #00000000;
+}
+
+.testemonial-card:hover {
+  border: 2px solid #3e3fd8;
+  box-shadow: 0px 0px 15px 10px rgba(62, 62, 216, 0.20);
+  transition: all ease 0.3s;
+}
+
+.deponent-informations {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  column-gap: 20px;
+  margin-bottom: 20px;
+}
+
+.informations-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.deponent-name {
+  font-size: 1.5rem;
+}
+
 
 /* utilities */
 .main-container {
