--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@
   width: 150px;
 }
 
-/*  */
+/* Next Level Section */
 .next-level-container {
   display: flex;
   justify-content: space-between;
@@ -223,7 +223,7 @@
   width: 450px;
 }
 
-/* */
+/* Boos Business */
 .boost-business-container {
   text-align: center;
 }
@@ -298,7 +298,7 @@
   left: 85px;
 }
 
-/* */
+/* Solutions section */
 .solutions-container {
   display: flex;
   align-items: center;
@@ -352,7 +352,7 @@
   left: 40px;
 }
 
-/* */
+/* Testemonials section */
 .testemonials-container {
   text-align: center;
   margin-bottom: 200px;
@@ -385,8 +385,9 @@
 
 .testemonial-card:hover {
   border: 2px solid #3e3fd8;
-  box-shadow: 0px 0px 15px 10px rgba(62, 62, 216, 0.20);
-  transition: all ease 0.3s;
+  box-shadow: 0px 0px 15px 10px rgba(62, 62, 216, 0.2);
+  padding: 32px 32px 42px;
+  transition: all ease 0.5s;
 }
 
 .deponent-informations {
@@ -406,6 +407,50 @@
   font-size: 1.5rem;
 }
 
+/* News section */
+.news-container {
+  margin-top: 80px;
+  text-align: center;
+}
+
+.news-container h2 {
+  margin-bottom: 20px;
+}
+
+.news-container p {
+  max-width: 490px;
+  margin: auto;
+  margin-bottom: 80px;
+}
+
+.news-cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 20px;
+}
+
+.news-card {
+  text-align: start;
+  border: 2px solid #3e3fd8;
+  border-radius: 20px;
+  padding: 20px 20px 40px;
+  box-shadow: 4px 4px 50px 0px rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+}
+.news-card img {
+  border-radius: 20px;
+}
+
+.news-publish-information {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #61646b;
+  font-size: 1.125rem;
+}
 
 /* utilities */
 .main-container {
